# inav-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  PROJECT_SPEC.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: flying_wing_quickstart.md
inav_mcp/: cli.py  connection.py  modes.py  msp.py  profiles.py  safety.py  server.py  state.py  troubleshoot.py
inav_mcp/knowledge/: arming_flags.json  esc_protocols.json  fc_targets.json  modes_reference.json
tests/: test_cli.py  test_cli_batch.py  test_cli_props_gate.py  test_diagnostics.py  test_followups.py  test_modes_m4.py  test_msp_codec.py  test_new_tools_m6.py  test_profiles.py  test_reconnect.py  test_resources_prompts.py  test_server_cli.py  test_status_v2.py
tools/: gen_readme_tools.py
